# free5gc-Docker

./: Dockerfile  README.md  build_base_images.sh  docker-compose.yml  logs.sh  smfcfg.conf
amf/: Dockerfile  amf.conf  free5gc.conf  run.sh
free5gc/: README.md  main.c
free5gc/lib/freeDiameter-1.2.1/: configure.ac
free5gc/lib/freeDiameter-1.2.1/extensions/: Makefile.am
free5gc/lib/freeDiameter-1.2.1/extensions/acl_wl/: Makefile.am
free5gc/lib/pfcp/: pfcp_node.h  pfcp_types.h
free5gc/lib/sbiJson/: JsonTransform.c
free5gc/src/app/: app.h  init.c
free5gc/src/smf/: smf_init.c  smf_n11_build.c  smf_n4_handler.c
free5gc/src/smf/http_server/: main.go
free5gc/src/upf/: upf_n4_build.c
free5gc/webui/: package-lock.json  package.json
free5gc/webui/pages/: _document.js
hss/: Dockerfile  free5gc.conf  hss.conf
load-balancer/: Dockerfile  keepalived.conf  run.sh
oaisim/: Dockerfile  docker-compose.yml
oaisim/enb/: Dockerfile  docker-entrypoint.sh  nf_api_complement.conf
oaisim/ue/: Dockerfile  docker-entrypoint.sh  register_ues  ue_eurecom_test_sfr.conf
pcrf/: Dockerfile  free5gc.conf  pcrf.conf
s1aptester/: Dockerfile  exec.sh  fw_api_int.x  nbAppCfg.txt  tester.py
smf/: Dockerfile  free5gc.conf  smf.conf
srsLTE/: Dockerfile  Dockerfile.epc  Dockerfile.package  enb.conf  epc.conf  user_db.csv
upf/: .iptables.sh.swp  Dockerfile  docker-entrypoint.sh  free5gc.conf  iptables.sh  upfcfg.yaml
upf2/: Dockerfile  free5gc.conf  iptables.sh
webapp/: Dockerfile
webapp/webui/: package-lock.json  package.json
(+6 files in other folders)
